# ki_projekt

./: .env.example  .gitignore  Dockerfile  README.md  README.rst  ai_test.py  compose.yaml  example_outputs.md  get_function_lists.py  pyproject.toml
_ideas/: gemini_api.py  hugginface_dummy.py
assets/: .yarnrc.yml  css-watch.mjs  esbuild.config.mjs  package.json
assets/css/: app.css  entry.css  jquery-ui.css  loaders.css  nav.css  progress-bar.css  tree.css
assets/css/content/: bundle-download.css  editor.css  files.css  loading.css  review.css  selection.css  sphinx-download.css  sphinx.css
assets/js/: app.js  editor.js  entry.js  inject-jquery.js  jquery-ui.js  progress-bar.js  progress.js  review.js  test.js  tree.js  utility.js
ast/: app.py  requirements.txt
config/: settings.py
docs/: conf.py  index.rst  modules.rst  prompter.rst
docs/source/: conf.py  index.rst  modules.rst
parser/: Dockerfile  __init__.py  api_clients.py  app.py  build_docu.py  parse_file.py  prompt_system  requirements.txt
projekt_4/: __init__.py  ai_client.py  ai_test.py  api_clients.py  app.py  celery_utils.py  config.py  hello_world.py  prompt_user  redis_helper.py  tasks.py  test.py
projekt_4/templates/: index.html  test.html
prompter/: Dockerfile  __init__.py  api_clients.py  app.py  build_docu.py  requirements.txt
sp_docs/: Dockerfile  __init__.py  app.py  gen_docu.py
src/: docker-compose.yml
src/ast/: Dockerfile  app.py  parse_file.py
src/flask/: Dockerfile  app.py  celery_utils.py  requirements.txt  start.sh
src/flask/templates/: _index.html  index.html  (+1 more)
(+5 files in other folders)
