[project]
name = "projekt_4"
version = "0.1.0"
description = "An example Flask app running in Docker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask",
  "requests",
  "celery",
  "Flask-Session[redis]",
  "flask-talisman",
  "fastapi[standard]",
  "tqdm",
  "gunicorn",
  "werkzeug",
  "setuptools",
  "flask-static-digest",
  "validators>=0.34.0",
  "pygit2>=1.17.0",
  "ollama>=0.4.7",
  "google-genai>=1.10.0",
  "pydantic>=2.11.2",
]
